--- a/index.css
+++ b/index.css
@@ -3,19 +3,30 @@ body {
     flex-direction: column;
     align-items: center;
     text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+header {
+    margin-bottom: 50px;
 }
 .letterBlock {
     border-bottom: 5px solid black;
     padding: 5px;
     margin: 1%;
-    width: 30px;
+    height: 40px;
+    width: 40px;
 }
 
+.letterBlock p{
+    height: auto;
+    margin: 0;
+}
 #wordBlock {
     display: flex;
     flex-direction: row;
     font-size: 200%;
     width:fit-content;
+    height: fit-content;
+    justify-content: center;
 
 }
 
@@ -23,8 +34,8 @@ body {
     align-items: center;
 }
 
-.dontShowLetter {
-    color: white;
+.dontShowLetter p{
+    visibility: hidden;
 }
 
 #guessedBlock {
@@ -32,6 +43,14 @@ body {
     flex-direction: row;
     font-size: 150%;
     align-items: center;
+    justify-content: center;
+}
+
+#guessedBlock div{
+    border: 2.5px solid black;
+    margin: 5px;
+    width: 30px;
+    height: 30px;
 }
 
 .bigBoldText {
@@ -39,4 +58,8 @@ body {
     font-weight: bold;
 }
 
-* { border: 1px solid red; }
+#image {
+    height: 400px;
+    width: auto;
+    transition: 1s;
+}
