--- a/index.css
+++ b/index.css
@@ -5,6 +5,13 @@ body {
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+footer{
+    position: bottom;
+    margin-top: 10px;
+    padding-top: 20px;
+    border-top: 2px solid black;
+    width: 100%;
+}
 .letterBlock {
     border-bottom: 5px solid black;
     padding: 5px;
@@ -56,7 +63,36 @@ body {
 }
 
 #image {
-    height: 400px;
+    height: 300px;
     width: auto;
     transition: 1s;
 }
+
+#defBlock {
+    text-align: left;
+}
+
+button {
+    display: inline-block;
+    padding: 15px 25px;
+    font-size: 24px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: #fff;
+    background-color: #79d4ff;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 9px #999;
+    width: 160px;
+    margin: 1%;
+  }
+  
+  button:hover {background-color: #63b7df}
+  
+  button:active {
+    background-color: #559ec0;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
+  }
