--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 body {
+    overflow-x: hidden;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -16,39 +17,30 @@ header h1{
 }
 
 footer{
-    position: bottom;
-    margin-top: 10px;
     padding-top: 20px;
-    border-top: 2px solid black;
+    text-align: left;
+    position: bottom;
     width: 100%;
 }
 
 button {
-    display: inline-block;
-    padding: 15px 25px;
-    font-size: 24px;
     cursor: pointer;
     text-align: center;
     text-decoration: none;
     outline: none;
-    color: #fff;
-    background-color: #79d4ff;
-    border: none;
-    border-radius: 15px;
-    box-shadow: 0 9px #999;
-    width: 160px;
+    color: black;
+    background-color: #ffffff;
+    border-radius: 50%;
+    height:60px;
+    width: 60px;
     margin: 1%;
-  }
-  
-  button:hover {background-color: #63b7df}
-  
-  button:active {
-    background-color: #559ec0;
-    box-shadow: 0 5px #666;
+  }  
+
+button:active {
     transform: translateY(4px);
 }
 .letterBlock {
-    border-bottom: 5px solid #63b7df;
+    border-bottom: 5px solid #000000;
     padding: 5px;
     margin: 1%;
     height: 40px;
@@ -69,7 +61,10 @@ button {
     margin: 0 0 0 0;
 
 }
-
+.row{
+    display: flex;
+    flex-direction: row;
+}
 #display {
     align-items: center;
 }
@@ -79,7 +74,13 @@ button {
 }
 
 .showLetter {
-    color: #559ec0;
+    color: #000000;
+    font-weight: bolder;
+}
+
+.showEnd{
+    color: red;
+    font-weight: bolder;
 }
 
 #guessedBlock {
@@ -90,21 +91,13 @@ button {
     justify-content: center;
 }
 
-#guessedBlock div{
-    border: 2.5px solid red;
-    margin: 5px;
-    width: 30px;
-    height: 30px;
-    color: #ff4242;
-}
-
 .bigBoldText {
     font-size: 200%;
     font-weight: bold;
 }
 
 #image {
-    height: 300px;
+    height: 450px;
     width: auto;
     transition: 1s;
 }
@@ -113,9 +106,144 @@ button {
     text-align: left;
 }
 
+#mobile-input{
+    display: block;
+    padding: 1px;
+    width: 750px;
+    height: 250px;
+    max-height: 1000px;
+    border: 5px solid black;
+    margin: 5%;
+}
+#mobile-input div{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    min-width: fit-content;
+}
 #controlsBlock{
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: center;
-  }
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    z-index: 10;
+    right: 50px;
+    top: 50px;
+    display: flex;
+    flex-direction: column;
+}
+#mobile-input button{
+    text-align: center;
+    min-height: 60px;
+    min-width: 60px;
+    max-width: 60px;
+    max-height: 60px;
+    padding: 0;
+    font-size: 200%;
+    border-radius: 0%;
+    border: 5px solid black;
+    background-color: white;
+    color: black;
+    box-shadow: 5px 10px #666;
+}
+
+#hintButton{
+    border: none;
+    background: url('images/icons/question.png');
+    background-size: 100%;
+}
+
+#restartButton{
+    border: none;
+    background: url('images/icons/restart.png');
+    background-size: 100%;
+    margin-bottom: 10px;
+}
+
+#defBlock{
+    width: 400px;
+    max-width: 400px;
+    transition: 2s;
+}
+#otherGameBlock{
+    position: relative;
+    margin: 7.5%;
+}
+#gameBlock{
+    transition: 1s;
+}
+.column{
+    display: flex;
+    flex-direction: column;
+}
+.hide{
+    transition: opacity 3s ease-out;
+    opacity: 0;
+    width: 0 !important;
+    overflow: hidden;
+    transition: 3s;
+    margin: 0;
+    max-height: 0 !important;
+    margin: 0;
+}
+.show{
+    display: block;
+    opacity: 1;
+    transition: 1s;
+}
+.endMessage{
+    font-family: 'Permanent Marker', cursive;
+}
+@media only screen and (max-width: 1000px){
+    body{
+        font-size: 200%;
+    }
+    #mobile-input{
+        align-self: center;
+        justify-self: center;
+        width: 650px;
+        min-width: 500px;
+        max-width: 650px;
+        font-size: 50%;
+    }
+    #wordBlock{
+        font-size: 100%;
+    }
+    #defBlock{
+        position: static;
+        width: 800px;
+        max-width: 800px;
+    
+    }
+    #controlsBlock{
+        bottom: 100px;
+        right: 30px;
+    }
+    #hintButton{
+        height: 100px;
+        width: 100px
+    }
+    
+    #restartButton{
+        height: 100px;
+        width: 100px;
+    }
+    #image {
+        height: 700px;
+        width: auto;
+        transition: 1s;
+    }
+    .mobileColumn{
+        display: flex;
+        flex-direction: column;
+    }
+    .hide{
+        transition: opacity 2s ease-out;
+        opacity: 0;
+        overflow-y: hidden;
+        max-height: 0 !important;
+        margin: 0;
+        transition: 2s;
+    }
+}
