--- a/index.css
+++ b/index.css
@@ -17,7 +17,7 @@ header h1{
 }
 
 footer{
-    padding-top: 20px;
+    padding-top: px;
     text-align: left;
     position: bottom;
     width: 100%;
